paso caja de facebook a boton pequeño (y lo comento)

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -37,10 +37,13 @@
                                         </div>
                                     </div>
                                 </form>
+                                <!-- 
                                 <div align="left" style="padding-top: 5px;">
-                                    <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FCualBondicomar%2F140243409338332&amp;layout=standard&amp;show_faces=false&amp;width=290&amp;action=like&amp;font=verdana&amp;colorscheme=light&amp;height=52" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:70px;"></iframe><br>
+                                    <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+                                    <br>
                                     <g:plusone></g:plusone>
                                 </div>
+                                !-->
                             </div>
                             <div class="tab-pane" id="2">
                                 <form>
