--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -25,7 +25,7 @@
                                         <span class="add-on"><i class="icon-map-marker"></i>B</span>
                                         <input type="text" size="16" id="inputHasta" class="span10" placeholder="Hasta">
                                     </div>
-                                    <span>Ejemplos: 14 y 54 || 14 n568 || Catedral</span>
+                                    <p><small>Ejemplos: 14 y 54 || 14 n568 || Catedral</small></p>
                                     <div class="btn-toolbar">
                                         <div class="btn-group pull-left">
                                             <button class="btn btn-primary" type="submit" onclick="javascript:$.cb.click_button_buscar();return false">Buscar</button>
