mover mapa al seleccionar sugerencia

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -197,6 +197,7 @@ $(function() {
         }
         this.listo = true
         this.layer.redraw()
+        this.layer.map.moveTo(this.point)
     }
 
     // dos objetos de la clase marker
