mejorando estilo de botonera de busqueda

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -27,13 +27,13 @@
                                     </div>
                                     <p><small>Ejemplos: 14 y 54 || 14 n568 || Catedral</small></p>
                                     <div class="btn-toolbar">
-                                        <div class="btn-group pull-left">
-                                            <button class="btn btn-primary" type="submit" onclick="javascript:$.cb.click_button_buscar();return false">Buscar</button>
-                                        </div>
                                         <div class="btn-group">
                                             <a class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
                                             <a class="btn" title="Ayuda" onclick="javascript:$.cb.click_button_ayuda();"><i class="icon-question-sign"></i></a>
                                             <a class="btn" title="Compartir enlace a esta ubicación"><i class="icon-share"></i></a>
+                                        </div>
+                                        <div class="btn-group pull-right">
+                                            <button class="btn btn-primary" type="submit" onclick="javascript:$.cb.click_button_buscar();return false">Buscar</button>
                                         </div>
                                     </div>
                                 </form>
