--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -197,8 +197,8 @@ $(function() {
         this.point = new OpenLayers.Feature.Vector(
             new OpenLayers.Geometry.Collection(
                 [
-                point,
-                OpenLayers.Geometry.Polygon.createRegularPolygon(point, 600, 20, 0)
+                OpenLayers.Geometry.Polygon.createRegularPolygon(point, 600, 20, 0),
+                point
                 ]
             ),
             {tipo:this.id+":false:false"}
