--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -151,7 +151,7 @@ $(function() {
     //map.setCenter(map.center())
 
     // estilos de los markers
-    var styleMap = new OpenLayers.StyleMap();
+    var styleMap = new OpenLayers.StyleMap({fillColor: '#1166EE', fillOpacity: 0.2, strokeColor: '#1166EE', strokeOpacity: 0.3, strokeWidth: 2});
     lookup = {
         // nombre:hovering:dragging
         "A:false:false": { externalGraphic: "/media/css/openlayers/markerA.png", graphicWidth: 20, graphicHeight: 34, graphicYOffset: -34, graphicOpacity: 1 },
