reparando distancia mostrada

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -523,9 +523,7 @@ $(function() {
             <br>
             de ${inicio} a ${fin}
             <br>
-            a pie: ${long_pata}km
-            <br>
-            en bondi:${long_bondi}km
+            distancia: ${Math.round(long_pata)} m (pie) + ${Math.round(long_bondi/100)/10} km (bondi)
         </a>
     </li>
 </script>
